--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
 
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/usertext"
             android:layout_width="266dp"
             android:layout_height="54dp"
             android:layout_gravity="center_horizontal"
@@ -48,7 +48,7 @@
 
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/userpassword"
             android:layout_width="263dp"
             android:layout_height="56dp"
             android:layout_gravity="center_horizontal"
