--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,7 +45,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:paddingTop="30dp"
-            android:layout_height="600dp"
+            android:layout_height="500dp"
             android:layout_margin="10dp"
             android:columnCount="3"
             android:rowCount="3"
@@ -57,7 +57,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
                 android:background="@drawable/addcliente" />
 
             <Button
@@ -66,7 +67,10 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/relatorioestoque" />
 
             <Button
@@ -75,7 +79,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
                 android:background="@drawable/gerenciamentoestoque" />
 
 
@@ -85,7 +90,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
                 android:background="@drawable/add_carro" />
 
 
@@ -95,7 +101,10 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/controledecaixa" />
 
 
@@ -105,7 +114,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
                 android:background="@drawable/descricaoservico" />
 
 
@@ -115,7 +125,8 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
                 android:background="@drawable/addfuncionario" />
 
 
@@ -125,7 +136,10 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/produtividade" />
 
 
@@ -135,7 +149,9 @@
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
-                android:layout_margin="13dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+
                 android:background="@drawable/avaliacao" />
 
         </GridLayout>
