--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,14 +11,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <!-- Primeiro LinearLayout -->
         <LinearLayout
             android:id="@+id/label1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="25dp"
+            >
 
             <ImageView
                 android:layout_width="100dp"
@@ -44,11 +47,12 @@
         <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:paddingTop="30dp"
+            android:paddingTop="60dp"
             android:layout_height="500dp"
             android:layout_margin="10dp"
             android:columnCount="3"
             android:rowCount="3"
+            android:padding="10dp"
             tools:context=".MainActivity">
 
             <Button
@@ -59,7 +63,8 @@
                 android:layout_gravity="fill"
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="14dp"
-                android:background="@drawable/addcliente" />
+                android:background="@drawable/addcliente"
+                android:elevation="4dp"/>
 
             <Button
                 android:layout_width="0dp"
