--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,126 +45,132 @@
 
         <!-- Segundo LinearLayout abaixo do primeiro -->
 
-        <FrameLayout
+        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/seuConteinerDeFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:paddingTop="80dp"
+            android:layout_height="500dp"
+            android:layout_margin="10dp"
+            android:columnCount="3"
+            android:rowCount="3"
+            android:padding="10dp"
+            tools:context=".MainActivity">
 
-                <!-- Seus botões do GridLayout aqui -->
             <Button
                 android:id="@+id/addclienteclick"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:layout_gravity="fill"
                 android:layout_marginTop="14dp"
                 android:layout_marginBottom="14dp"
                 android:background="@drawable/addcliente"
-                android:elevation="4dp" />
+                android:elevation="4dp"/>
 
-                <Button
-                    android:id="@+id/esttoque"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:layout_marginLeft="9dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/relatorioestoque" />
+            <Button
+                android:id="@+id/esttoque"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/relatorioestoque" />
 
-                <Button
-                    android:id="@+id/getEstoque"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:background="@drawable/gerenciamentoestoque" />
-
-
-                <Button
-                    android:id="@+id/addcar"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:background="@drawable/add_carro" />
+            <Button
+                android:id="@+id/getEstoque"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:background="@drawable/gerenciamentoestoque" />
 
 
-                <Button
-                    android:id="@+id/controleCaixa"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:layout_marginLeft="9dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/controledecaixa" />
+            <Button
+                android:id="@+id/addcar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:background="@drawable/add_carro" />
 
 
-                <Button
-                    android:id="@+id/descServico"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:background="@drawable/descricaoservico" />
+            <Button
+                android:id="@+id/controleCaixa"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/controledecaixa" />
 
 
-                <Button
-                    android:id="@+id/addFuncionario"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:background="@drawable/addfuncionario" />
+            <Button
+                android:id="@+id/descServico"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:background="@drawable/descricaoservico" />
 
 
-                <Button
-                    android:id="@+id/produtividade"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
-                    android:layout_marginLeft="9dp"
-                    android:layout_marginRight="8dp"
-                    android:background="@drawable/produtividade" />
+            <Button
+                android:id="@+id/addFuncionario"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:background="@drawable/addfuncionario" />
 
 
-                <Button
-                    android:id="@+id/avaliacao"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_rowWeight="1"
-                    android:layout_columnWeight="1"
-                    android:layout_gravity="fill"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginBottom="14dp"
+            <Button
+                android:id="@+id/produtividade"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="8dp"
+                android:background="@drawable/produtividade" />
 
-                    android:background="@drawable/avaliacao" />
-        </FrameLayout>
 
+            <Button
+                android:id="@+id/avaliacao"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="14dp"
+
+                android:background="@drawable/avaliacao" />
+
+        </GridLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
